Roundcube Webmail ContextMenu
=============================

2010 08 21
==========
 * Fix error in deleteing after moving using context menu

2010 08 01
==========
 * Update hooks (r3840)

2010 06 19
==========
 * Hide menu after click in iframes

2010 06 03
==========
 * Update contact copying after r3694

2010 05 15
==========
 * Update hooks after r3685

2010 05 15
==========
 * Update after r3614

2010 04 13
==========
 * Update jquery.ContextMenu to 1.01

2010 03 31
==========
 * Use new imap->search_once function (r3446)

2010 03 28
==========
 * Add initial support for contact groups in address book

2010 03 27
==========
 * Fix mark all as read function

2010 03 20
==========
 * Update to r3393

2010 02 26
==========
 * Fix folder count with nested folders

2010 02 07
==========
 * Update after r3258

2009 12 01
==========
 * CSS update after r3141

2009 10 29
==========
 * Use local_skin_path() (rev 3076)

2009 10 04
==========
 * Added address book context menu (requires r3023)

2009 09 18
==========
 * Fix folder menu for UTF8 folders
 * Use rcmail_send_unread_count (r2960)
 * Add 'move to' to message list menu

2009 09 11
==========
 * Added folder list context menu

2009 06 27
==========
 * Moved menu generation from JS to PHP
 * Added support for sub menus
 * Added new "edit" action

2009 06 07
==========
 * Update insertrow event listener following changes in core
 * Add fallback to default skin

2009 05 31
==========
 * Better init restrictions

2009 05 30
==========
 * Correct style after r2541
 * Only init when on mailbox screen (while _uid is empty and user is logged in)

2009 05 25
==========
 * Added hook for other plugins to add items to the menu (see README)

2009 05 24
==========
 * Added support for new actions: show source, save .eml, open in new window
 * Added support for plugin template system
 * Added highlighting of selected row

2009 04 30
==========
 * Fixed menu in IE

2009 04 29
==========
 * Fixed delete in Trash folder
